# Reddit-Stock-Trends

./: .deepsource.toml  .gitignore  LICENSE  README.md  US_LIST_OF_SYMBOLS.csv  docker-compose.yml  pyproject.toml  requirements.txt  ticker_counts.py  yfinance_analysis.py
.github/: FUNDING.yml
back/: .dockerignore  Dockerfile  example.py  requirements.txt  server.py  ticker_counts.py  wsgi.py  yfinance_analysis.py
back/StockTrends/: __init__.py  main_utils.py  processing.py  requirements.txt  scraper.py
back/config/: config.ini  tickers.json
back/rStockTrends/: scraper.py
back/rStockTrends/data_processor/: __init__.py  processing.py
back/rStockTrends/scraper_utils/: __init__.py
back/rStockTrends/scraper_utils/config/: config.ini
back/rStockTrends/yfinance_utils/: __init__.py  yfinance_analysis.py
extras/: US_LIST_OF_SYMBOLS.csv
front/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
front/src/: App.vue  axios.d.ts  main.ts  vuesax.d.ts
front/src/api/: HttpProvider.ts  ticksData.ts
front/src/components/: HelloWorld.vue
front/src/composables/: use-ticks.ts
front/src/router/: index.ts
front/src/views/: Home.vue
front/tests/unit/: example.spec.ts
react-front/: Dockerfile  README.md  package-lock.json  package.json
react-front/public/: index.html
react-front/src/: App.js  GlobalStyles.js  index.js
react-front/src/components/: Table.js
react-front/src/hooks/: useTickerToTable.js
src/: Reddit_Stock_Trends.ipynb  requirements.txt  ticker_counts.py  yfinance_analysis.py
src/config/: config.ini
