[tool.poetry]
name = "reddit-stock-trends"
version = "0.1.0"
description = ""
authors = ["[@abbasmdj](https://twitter.com/abbasmdj)"]

[tool.poetry.dependencies]
python = "^3.8"
yfinance = "^0.1.55"
pandas = "^1.2.1"
praw = "^7.1.3"
numpy = "^1.20.0"
tqdm = "^4.56.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
